# agencia-v3

./: .coverage  .env.example  .gitignore  PROYECTO_AGENCIA_V3_MAESTRO.md  README.md  deploy.sh  pyproject.toml  registro_noche.txt  requirements.txt
agents/: analista_flujos.py  invstigador de IAs nuevas.py
api/: __init__.py  auth.py  dependencies.py  main.py  models.py  repository.py  routes.py  store.py  team_director.py  websocket.py
config/: habilidades.json  settings.py
core/: __init__.py  agent.py  base.py  director.py  group.py  orchestrator.py
dashboard/: .env.example  Dockerfile  package-lock.json  package.json
data/: claims.json
demos/: README.md  demo_business_analysis.py  demo_content_pipeline.py  demo_legal_review.py  demo_ops_automation.py  run_all_demos.py
export/: builder.py
groups/: __init__.py  accounting_report.py  blog_publisher.py  business_analysis.py  content_pipeline.py  content_repurposer.py  daily_report.py  education_manager.py  email_campaign.py  financial_advisor.py  health_assistant.py  hr_onboarding.py  insurance_advisor.py  lead_nurturing.py  legal_review.py  logistics_coordinator.py  market_intelligence.py  ops_automation.py  ops_daily.py  quotation_generator.py  real_estate_agent.py  restaurant_manager.py  sales_pipeline.py  social_autopilot.py  social_media_manager.py  travel_planner.py
license-server/: .env.example  auth.py  dashboard.html  db.py  deploy.md  main.py  models.py  requirements.txt  test_main.py
llm/: __init__.py  base.py  gemini.py  groq.py  mistral.py  ollama.py
memory/: __init__.py  context.py  db.py  (+1 more)
(+1092 files in other folders)
